# template-mlops

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO_Projet2.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_math_csv.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: cd.yml  ci.yml  docs.yml
app/: main.py
app/modules/: mon_module.py
app_api/: .coverage  Dockerfile  main.py  pyproject.toml
app_api/data/: moncsv.csv
app_api/maths/: __init__.py  mon_module.py
app_api/models/: __init__.py  models.py  schemas.py
app_api/modules/: __init__.py  connect.py  crud.py
app_front/: Dockerfile  main.py  pyproject.toml
app_front/pages/: 0_insert.py  1_read.py
docs/source/: conf.py  index.rst
public/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  mon_module.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/.doctrees/: api.doctree  environment.pickle  index.doctree  mon_module.doctree
public/_modules/: index.html
public/_modules/maths/: mon_module.html
public/_modules/models/: models.html  schemas.html
public/_modules/modules/: connect.html  crud.html  mon_module.html
public/_modules/sqlalchemy/orm/: attributes.html  decl_api.html
public/_modules/sqlalchemy/sql/: schema.html
public/_sources/: api.rst.txt  index.rst.txt  mon_module.rst.txt
tests/: test_api.py  test_match_csv.py  test_math_csv.py
