[project]
name = "python-professional-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5",
    "fastapi>=0.135.1",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "streamlit<=1.16",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
