[project]
name = "python-professional-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5",
    "fastapi>=0.135.1",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "streamlit<=1.16",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]


[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D"]
ignore = ["D100", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"conftest.py" = ["D"]

[tool.pytest.ini_options]
pythonpath = ["app_api"]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app_api --cov-report=term-missing"